force-app/main/default/objects/custom_create107__c/custom_create107__c.object-meta.xml
<CustomObject>
    <label>Custom created object107</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects107</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>