force-app/main/default/objects/custom_create107__c/fields/custom_create_107field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_107field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 107field505</label>
    <type>Checkbox</type>
</CustomField>